playlist update on 01/16/21:\ndiff --git a/ytube/_data/lists/all-music-keys.yml b/ytube/_data/lists/all-music-keys.yml index 03fce20..e752bdb 100644 --- a/ytube/_data/lists/all-music-keys.yml +++ b/ytube/_data/lists/all-music-keys.yml @@ -10,0 +11 @@ +- iWZmdoY1aTE # Ed Sheeran - Happier (Official Music Video) @@ -2056,0 +2058 @@ +- zlJDTxahav0 # Selena Gomez - Lose You To Love Me (Official Music Video) diff --git a/ytube/_data/lists/bitcoin-keys.yml b/ytube/_data/lists/bitcoin-keys.yml index af5e498..3f28bc8 100644 --- a/ytube/_data/lists/bitcoin-keys.yml +++ b/ytube/_data/lists/bitcoin-keys.yml @@ -14,0 +15 @@ +- xWyJ0gO7bh8 # Visualizing Bitcoin Blockchain Block Hashes @@ -18,0 +20 @@ +- jP7pEgBpaO0 # Bitcoin Q&A: Passphrases and Seed Storage diff --git a/ytube/_data/lists/coding-keys.yml b/ytube/_data/lists/coding-keys.yml index 76a4dfc..b37ad89 100644 --- a/ytube/_data/lists/coding-keys.yml +++ b/ytube/_data/lists/coding-keys.yml @@ -18,0 +19,2 @@ +- jdqsiFw74Jk # Youtube Data API v3 & jQuery To List Channel Videos +- TE66McLMMEw # YouTube Data API v3 Tutorial diff --git a/ytube/_data/lists/crypto-keys.yml b/ytube/_data/lists/crypto-keys.yml index 9c83860..98fd947 100644 --- a/ytube/_data/lists/crypto-keys.yml +++ b/ytube/_data/lists/crypto-keys.yml @@ -23,0 +24 @@ +- mKtsM2vv0DA # Who is Satoshi Nakamoto? (Vitalik Buterin) | AI Podcast Clips diff --git a/ytube/_data/lists/docum-keys.yml b/ytube/_data/lists/docum-keys.yml index cb6893a..0b5b47a 100644 --- a/ytube/_data/lists/docum-keys.yml +++ b/ytube/_data/lists/docum-keys.yml @@ -19,0 +20 @@ +- DPCL9kj7_bU # How Oak Trees Manipulate Squirrels To Abandon Their Acorns diff --git a/ytube/_data/lists/fake-keys.yml b/ytube/_data/lists/fake-keys.yml index c58646e..7414d66 100644 --- a/ytube/_data/lists/fake-keys.yml +++ b/ytube/_data/lists/fake-keys.yml @@ -6,0 +7 @@ +- 8KFQx-mc2Ao # 'So you won't take down lies?': Alexandria Ocasio-Cortez challenges Facebook CEO diff --git a/ytube/_data/lists/geek-keys.yml b/ytube

--- a/ytube/_data/lists/all-music-keys.yml
+++ b/ytube/_data/lists/all-music-keys.yml
@@ -8,6 +8,7 @@
 - 5cV5DHaVKv4 # Byron Metcalf  - Heart Warriors
 - zHDrHRmaQjQ # Anilah - Medicine Chant
 - DLQD47iDb18 # 639 Hz ❯ LOVE &amp; COMPASSION SOUNDBATH ❯ Heart Chakra Healing Frequency Music ❯ Pure Miracle Tone
+- iWZmdoY1aTE # Ed Sheeran - Happier (Official Music Video)
 - pzm9bF9oLqw # Flaer Smin ~ Wish U Were Here
 - 3KNc-nZpH48 # Relaxing Hang Drum music for Yoga and Meditation from Best Relaxing Music (instrumental)
 - DgD1oruX6WE # Go into a DEEP TRANCE : Shamanic DRUM JOURNEY (28 min.)
@@ -2054,6 +2055,7 @@
 - Jh7oFiMVCZM # Summer Mix 2018 | Best Tropical Deep House Wonderful Mix | KYGO - SIA - JUSTIN BIEBER - ED SHEERAN
 - vlRcshR3kXg # Madonna - Communion (Deep House Mix)
 - O40tm8_ZlPw # KIKI DOLL - CITY ( LUCA DEBONAIRE &amp; KIKI DOLL DEEP MIX)
+- zlJDTxahav0 # Selena Gomez - Lose You To Love Me (Official Music Video)
 - 8iZTb9NWbz8 # Arozin Sabyh - Fall In Lové (New Officiel Vedios)
 - I4G_RLt6hhY # Best EDM Music October 2017 💎 Electro House Chart Mix
 - Y0TjJLleU3A # Summer Mix 2018 - Best Of Deep House Sessions Music Chill Out Mix By Magic
