--- a/ytube/_data/lists/all-videos-keys.yml
+++ b/ytube/_data/lists/all-videos-keys.yml
@@ -135,6 +135,7 @@
 - 5cV5DHaVKv4 # Byron Metcalf  - Heart Warriors
 - zHDrHRmaQjQ # Anilah - Medicine Chant
 - DLQD47iDb18 # 639 Hz ❯ LOVE &amp; COMPASSION SOUNDBATH ❯ Heart Chakra Healing Frequency Music ❯ Pure Miracle Tone
+- iWZmdoY1aTE # Ed Sheeran - Happier (Official Music Video)
 - pzm9bF9oLqw # Flaer Smin ~ Wish U Were Here
 - 3KNc-nZpH48 # Relaxing Hang Drum music for Yoga and Meditation from Best Relaxing Music (instrumental)
 - DgD1oruX6WE # Go into a DEEP TRANCE : Shamanic DRUM JOURNEY (28 min.)
@@ -2180,6 +2181,7 @@
 - Jh7oFiMVCZM # Summer Mix 2018 | Best Tropical Deep House Wonderful Mix | KYGO - SIA - JUSTIN BIEBER - ED SHEERAN
 - vlRcshR3kXg # Madonna - Communion (Deep House Mix)
 - O40tm8_ZlPw # KIKI DOLL - CITY ( LUCA DEBONAIRE &amp; KIKI DOLL DEEP MIX)
+- zlJDTxahav0 # Selena Gomez - Lose You To Love Me (Official Music Video)
 - 8iZTb9NWbz8 # Arozin Sabyh - Fall In Lové (New Officiel Vedios)
 - I4G_RLt6hhY # Best EDM Music October 2017 💎 Electro House Chart Mix
 - Y0TjJLleU3A # Summer Mix 2018 - Best Of Deep House Sessions Music Chill Out Mix By Magic
@@ -12934,6 +12936,73 @@
 
 
 
+
+
+
+- xWyJ0gO7bh8 # Visualizing Bitcoin Blockchain Block Hashes
+- jP7pEgBpaO0 # Bitcoin Q&A: Passphrases and Seed Storage
+
+- ?list=UC1GHd6Cg3XRd2dWz-MVJTXw # Krystal
+- ?list=UCnQ8h0LSiPVpSY7kQ5D9qCw # DrCol NutraUHealth
+- ?list=UC-wEZYcV8_hi1eHBYyCqe5Q # Quantic Change
+- ?list=UC7BQ6cPlIXIG2mGELXXFQeA # Dr P.
+- ?list=UCEAS25i5eBVpQxzlCDALrVA # mgcombes
+- ?list=UCnbcapq1j0_N3UwMwL1xNYQ # Fake News (mgc04)
+- TE66McLMMEw
+- 5BoxRDDDSEA # 20 YOUTUBE CHANNEL IDEAS THAT ARE GROWING FAST IN 2020! | YOUTUBE NICHE IDEAS
+- QVETsrItWYY # 20 YouTube Niches to Make Money Without Showing Your Face
+- yAIr5g1tQwE # What YouTubers Don't Tell You About Starting a Channel (using Fiverr)
+- fHsa9DqmId8 # My Video Went Viral. Here's Why
+- jJv6aD9oe0I # 10 YouTube Niches That are Growing The FASTEST! | Trending Channel Ideas 2020
+- Kh_6ggYN_kI # Make $10,000 Per Month Re-Uploading YouTube Videos (WORKING IN 2020)
+- CxtvgM3E23s # Best YouTube Channel Ideas Without Showing Face and Voice 2021 (THAT MAKE MONEY)
+- UlgBFH5ZK-k # 20 HUGE Mistakes NEW YouTubers Make
+- NYZGzdsXQOM # Make $100 Per Day On YouTube Without Making Any Videos (Make Money Online)
+- ziA3LOerd74 # 7 Side Hustles You Can Do From Home
+- shtxwa4CkGo # How to START a YouTube Channel Going Into 2021: Beginner's Guide to Growing from ZERO Subscribers
+- q8RV0X8_rn0 # 5 MOST PROFITABLE NICHES ON YOUTUBE 2020 🤑 // YOUTUBE MONETIZATION AND BRAND DEALS 🤑
+- VmI1vSAoFNw # How Much Money Does My Small 9,000 Subscriber YouTube Channel Make?
+- JJ-ogw8AZ3o # Here’s why Mr Beast is a GENIUS - How He Grew his YouTube Channel
+- zm5kOHmmcRc # Mistakes Youtubers are Making in 2020 that are HURTING Your Channel
+- jdqsiFw74Jk # Youtube Data API v3 & jQuery To List Channel Videos
+- TE66McLMMEw # YouTube Data API v3 Tutorial
+- b-ZbsEpCqvo # Food cravings and your superfood chocolate power snack 16 January 2021
+- nX4uOLFwnJ4 # NutraUHealth Immune Mocktail 15 January 2021
+- DFwKV7Wumgo # NutraUHealth Home Power Shake
+- mKtsM2vv0DA # Who is Satoshi Nakamoto? (Vitalik Buterin) | AI Podcast Clips
+- DPCL9kj7_bU # How Oak Trees Manipulate Squirrels To Abandon Their Acorns
+- pJ3tq1Xejvg # Michael Moore Has an Answer for 'Fake News'
+- 8fQdzVbQlaU # 'Fake News' explained: How disinformation spreads
+- nknYtlOvaQ0 # Why obvious lies make great propaganda
+- C-7fzHy3aG0 # Kellyanne Conway's interview tricks, explained
+- p5P6nlQUt1U # SHAPIRO: 5 Reasons Why CNN Is Fake News
+- 8KFQx-mc2Ao # 'So you won't take down lies?': Alexandria Ocasio-Cortez challenges Facebook CEO
+
+- 5o_DODh3Yfc # 'Fuming': How Trump is reacting to his second impeachment
+- 6WGKz2sUa0w # Why all solar panels are secretly LEDs (and all LEDs are secretly solar panels)
+
+
+
+
+
+
+
+
+- UJepAsi7NAQ # Rioter who beat police officer says 'death is the only remedy'
+- mx6MzHYzEfY # Ellen's Favorite Moments with Noah Ritter
+
+- 1LvmPL-ubsI # Alexandria Ocasio-Cortez Best Moments Supercut | NowThis
+- _v-hzc6blGI # How Trump makes extreme things look normal
+- rELHUMNt4HM # The awkward debate around Trump's mental fitness
+- TJlpS4vhKP0 # Alexandria Ocasio-Cortez calls out Trump in five-minute corruption game
+
+- 2SpNjBI1lu0 # How Boston Dynamics' Spot Robot Learns to Dance!
+
+- DA91ZnUcK94 # Trump shocked by Hunter Biden : '"sex trafficking", "extortion", Russian money - 'This is Biden son'
+- 4lcb6s8U3ww # βre4king TrUmp N3wS 4PM 1/15/2021 | Newsm4x βre4king TrUmp N3wS T0DAY 4PM Jan 15, 2021
+
+- wD6hyGXRcgk # TIMELAPSE OF FUTURE TECHNOLOGY: 2022 - 4000+
+- 0onncd0_0-o # Tensegrity Explained
 
 
 
