--- a/ytube/_data/lists/bitcoin-keys.yml
+++ b/ytube/_data/lists/bitcoin-keys.yml
@@ -12,10 +12,12 @@
 - c_5ugxh_62U # Bitcoin Going To Zero! Mark It On Your Calendar - YouTube
 - l6Obc_cJba4 # Bitcoin cash ‘CEO’: We won’t need banks anymore
 - Kjtgp5h-jEY # Bitcoin 101 - The Nightmare of a 51% Attack - Part 2 - How to Destroy Bitcoin
+- xWyJ0gO7bh8 # Visualizing Bitcoin Blockchain Block Hashes
 - Lx9zgZCMqXE # How Bitcoin Works Under the Hood
 - w4HGVJjqDVk # The Truth About Bitcoin
 - z0MdbdyWP8Y # Should You Trade Bitcoin Or Just Buy &amp; Hold?
 - Em8nJN8IEes # Bitcoin Transaction Details - Part 1
+- jP7pEgBpaO0 # Bitcoin Q&A: Passphrases and Seed Storage
 - 8cCVAs1Nd7Q # Japan made bitcoin a legal currency - now it&#39;s more popular than ever | CNBC Reports
 - Q6bhXa2-pZc # Bitcoin vs Ethereum vs Ripple - Which is Better?  Which Will Win?
 - vGnH-Od1lJM # Futures - How it will affect Bitcoin prices!
