--- a/ytube/_data/lists/coding-keys.yml
+++ b/ytube/_data/lists/coding-keys.yml
@@ -16,3 +16,5 @@
 - yG0RhKFTonw # How to use Cracking The Coding Interview Effectively
 - wCl9kvQGHPI # Cracking the Facebook Coding Interview The Approach
 - HXNhEYqFo0o # Programming Loops vs Recursion - Computerphile
+- jdqsiFw74Jk # Youtube Data API v3 & jQuery To List Channel Videos
+- TE66McLMMEw # YouTube Data API v3 Tutorial
