--- a/ytube/_data/lists/crypto-keys.yml
+++ b/ytube/_data/lists/crypto-keys.yml
@@ -21,6 +21,7 @@
 - KMydq_m9f_4 # EB92 – Stefan Thomas: Understanding Ripple
 - 0L8MHXwCNsU # Blockchain/Bitcoin for beginners 6: blocks and mining, content and creation of bitcoin blocks
 - Y6MVPH76QR0 # Bitcoin...Its all going to change this Sunday Night at 6:00 pm Eastern US - Dec 10 2017
+- mKtsM2vv0DA # Who is Satoshi Nakamoto? (Vitalik Buterin) | AI Podcast Clips
 - bi2thGzzNSs # Bitcoin 101 - The Nightmare of a 51% Attack - Part 1 - Calculating the Costs
 - bU79HunxJp8 # How Ripple Works - xCurrent
 - xgGcVv04unM # Makita 18V X2 LXT 36V Brushless Corded/Cordless Vacuum XCV04Z
