--- a/ytube/_data/lists/docum-keys.yml
+++ b/ytube/_data/lists/docum-keys.yml
@@ -17,6 +17,7 @@
 - 3Q6Fzbgs_Lg # The Internet&#39;s Own Boy: The Story of Aaron Swartz (Must Watch Documentary 2014)
 - d2AgV_6HkDI # How Humans Stopped Evolution Forever
 - 51IY5XhdJR8 # Mission Immuno-Possible | Dance Your PhD Competition 2016 Finalist
+- DPCL9kj7_bU # How Oak Trees Manipulate Squirrels To Abandon Their Acorns
 - koi54cPRlhQ # 21st Century Hackers - Documentary 2018
 - sLMZwwhSZQg # 3 Surprising Ways Humans Are Still Evolving
 - ARDfbMJpMqQ # Millennials Don&#39;t Stand a Chance
