--- a/ytube/_data/lists/geek-keys.yml
+++ b/ytube/_data/lists/geek-keys.yml
@@ -17,6 +17,7 @@
 - UCISttFSoIY # B8 2.0TFSI 155KW
 - JNK8Bp9sZOA # John McAfee - Takes On Larry King - One on One
 - dhpg_8D2FPI # Zap: Lightning Network Wallet
+- 5o_DODh3Yfc # 'Fuming': How Trump is reacting to his second impeachment
 - sZuxHSM8p-Q # Ledger Hardware Receive Address Attack | Protect Your Bitcoin
 - R1CBfyPQmcM
 - rUWfod_8JsM # Michio Kaku: How to Program a Quantum Computer
@@ -27,6 +28,7 @@
 - BfDQNrVphLQ # How Will Artificial Intelligence Affect Your Life | Jeff Dean | TEDxLA
 - 0YzoEBCjsIw # Alarming Artificial Intelligence The AI Documentary
 - MpfvhiqFw7A # The Lightning Network Explained (Litecoin/Bitcoin)
+- 6WGKz2sUa0w # Why all solar panels are secretly LEDs (and all LEDs are secretly solar panels)
 - Yo9o5nDTAAQ # Devcon3 Day 1 Stream
 - Z7lE1rZuuPQ # Cute SOPHIA&#39;S Message To Humankind | Look Closely | Hanson robotics
 - Gkb43TvpuhU # Robots AI The New Species Robot Evolution Documentary
