--- a/ytube/_data/lists/politics-keys.yml
+++ b/ytube/_data/lists/politics-keys.yml
@@ -1,5 +1,9 @@
 --- 
 - xA1sEjxPDWQ # The People&#39;s NSA
 - q5hpBq7V-sw # Breaking News - China Now Poses A Real Threat To U.S. Security
+- 1LvmPL-ubsI # Alexandria Ocasio-Cortez Best Moments Supercut | NowThis
 - RFrKYYNiyZE # Hacker Wins Election As Pirate Party Leader
+- _v-hzc6blGI # How Trump makes extreme things look normal
 - 4HncGYdfnn8 # Pink Floyd Co-Founder Roger Waters- Julian Assange's Persecution Makes Me ASHAMED to be English!
+- rELHUMNt4HM # The awkward debate around Trump's mental fitness
+- TJlpS4vhKP0 # Alexandria Ocasio-Cortez calls out Trump in five-minute corruption game
