--- a/ytube/_data/lists/robots-keys.yml
+++ b/ytube/_data/lists/robots-keys.yml
@@ -10,6 +10,7 @@
 - RTi7DjqlGO8 # The Thymio II robot unleashes your creativity!
 - tu1GKTi_QdA # HUMANOID ROBOT SOPHIA WARNS ABOUT THE FUTURE OF HUMANITY (MUST SEE)
 - ZfVtZ7BdEag # Dance with Thymio II
+- 2SpNjBI1lu0 # How Boston Dynamics' Spot Robot Learns to Dance!
 - q6vtNPp2P94
 - 0eQm3cgwGrc
 - zrzCYgNnHfI 
