--- a/ytube/_data/lists/seen-keys.yml
+++ b/ytube/_data/lists/seen-keys.yml
@@ -13,6 +13,7 @@
 - GYQRVn8ttwM # "I Can Teach You How to Program The Subconscious Mind" - Dr. Bruce Lipton - An Eye Opening Speech
 - z7zLh3k2hrA # Pourquoi j'ai arrêté le porno (conférence)
 - hGyeo8dihq8 # Un Prof Français révèle un vieux secret qui dirige le Monde!!
+- DA91ZnUcK94 # Trump shocked by Hunter Biden : '"sex trafficking", "extortion", Russian money - 'This is Biden son'
 - cxdwEOpGknk # Emily Browning - Sweet Dreams
 - O6xWhWnI6t4 # LIVING WATERS: Sound Frequencies & CYMATICS
 - 7wCFo1G-pP0 # 5G The Elephant in Your Living Room (via: thecrowhouse)
@@ -23,6 +24,7 @@
 - wn5bKALeSyM # Max Loughan - 13 year old physicist, Inventor has New Theory on God
 - 4bRqpJJKhVw # Estas Tonne : &quot;I LOVE&quot; ***    Paintings : Freydoon Rassouli
 - 65Lx1F4ddg0 # Does Your Business have a Purpose?
+- 4lcb6s8U3ww # βre4king TrUmp N3wS 4PM 1/15/2021 | Newsm4x βre4king TrUmp N3wS T0DAY 4PM Jan 15, 2021
 - FRWPQFoEHWw # Jillian Speer - Spill (Lyrics Video)
 - 1GxTJ7W0JyM # Morven Brown performs &#39;Afterglow&#39; - The Voice UK 2015: Blind Auditions 4 - BBC One
 - jsUuHKnOPTI # The Most Dangerous Waters In The World
