--- a/ytube/_data/lists/techno-keys.yml
+++ b/ytube/_data/lists/techno-keys.yml
@@ -4,6 +4,7 @@
 - O6xWhWnI6t4 # LIVING WATERS: Sound Frequencies & CYMATICS
 - cD_WlVdeozE # Dr. Walt Russell on God And Technology
 - GHoJxcnaNxI # Scientists Aren&#39;t Going to Tell You This! (2017-2018)
+- wD6hyGXRcgk # TIMELAPSE OF FUTURE TECHNOLOGY: 2022 - 4000+
 - aMwBtFdLdAc # ROBIN HANSON: THE AGE OF MIND UPLOADING
 - jMRz-muceGQ # Did God Create the Internet? The Impact of Technology on Humanity
 - Pjyo2uILcOs # Martin Becze: Interplanetary OS
@@ -18,6 +19,7 @@
 - knrHPneSN10 # Nuclear Fusion Energy: The Race to Create a Star on Earth
 - 1BXYSGepx7Q # What you need to know about CRISPR | Ellen Jorgensen
 - vO-1l0lXR_U # Hutchison demonstrates Zero Point Energy
+- 0onncd0_0-o # Tensegrity Explained
 - PMma3OJUHhs # A Permanent Magnet That Turns On and Off
 - 4t6InWhWx6O # 
 - JbQeABIoO6A # Next Future Terrifying Technology Will Blow Your Mind
