--- a/ytube/_data/ytlist.yml
+++ b/ytube/_data/ytlist.yml
@@ -23,15 +23,18 @@
 - burnman-ish-keys
 - burn-out-keys
 - capitalism-keys
+- channels-keys
 - chill-deep-keys
 - classes-keys
 - classical-keys
 - classic-keys
+- clickbate-keys
 - climate-keys
 - coding-keys
 - conspiracy-keys
 - corruption-keys
 - cortinas-keys
+- creative-kitchen-keys
 - crypto-keys
 - cyberwar-keys
 - danceable-keys
@@ -48,6 +51,7 @@
 - entrepreneur-keys
 - environment-keys
 - eperel-keys
+- fake-keys
 - films-keys
 - fintech-keys
 - fossil-industry-keys
