playlist update on 01/19/21:\n diff --git a/ytube/_data/lists/all-music-keys.yml b/ytube/_data/lists/all-music-keys.yml index e752bdb..2552cba 100644 --- a/ytube/_data/lists/all-music-keys.yml +++ b/ytube/_data/lists/all-music-keys.yml @@ -5,0 +6 @@ +- dxUZeJf8mAc # Алина Палий, Corinne Bailey Rae - Like A Star (Cover version) @@ -30,0 +32 @@ +- GxjcY8nqlhg # Полина Гагарина - Драмы больше нет @@ -32,0 +35,2 @@ +- ILBN4Qyzt-Y # Полина Гагарина - Зима (Lyric video) +- 4ohMPni5PB4 # Интро @@ -2150,0 +2155 @@ +- qo2Jj6kI4Ss # LOBODA - moLOko (Премьера клипа, 2020) @@ -2182,0 +2188 @@ +- jhOxU7QmocU # Intro (Live) @@ -2184,0 +2191 @@ +- pVIvO83_Rtc # LOBODA - Random [Official video] @@ -2186,0 +2194 @@ +- MZSc_YpYWkA # intro @@ -2189,0 +2198,2 @@ +- aOZqcIRttf8 # LOBODA & PHARAOH - Boom Boom (Премьера клипа, 2020) +- V_8yP2lPhXI # LOBODA - К ЧЕРТУ ЛЮБОВЬ @@ -2196,0 +2207 @@ +- pXes7ZSqSZU # В. Цой / Полина Гагарина - Кукушка (Даниэла) diff --git a/ytube/_data/lists/clickbate-keys.yml b/ytube/_data/lists/clickbate-keys.yml index 151ac4c..dda8b24 100644 --- a/ytube/_data/lists/clickbate-keys.yml +++ b/ytube/_data/lists/clickbate-keys.yml @@ -4,0 +5 @@ +- oxzuAmE2DcA # I Reviewed 200 MrBeast Thumbnails to Prove THIS diff --git a/ytube/_data/lists/fake-keys.yml b/ytube/_data/lists/fake-keys.yml index 7414d66..f0db78f 100644 --- a/ytube/_data/lists/fake-keys.yml +++ b/ytube/_data/lists/fake-keys.yml @@ -6,0 +7 @@ +- L4DkztDjlak # Reformed Neo-Nazi Explains How People Fall Prey to QAnon Online | MSNBC @@ -8 +9,9 @@ - +- 04hvzl-59nY # Truth or Fake 2020: 4 tips for detecting fake news +- UQcCIzjz9_s # How Real Is Fake News? | Sharyl Attkisson | TEDxUniversityofNevada +- u8Gd9MJsnnE # QAnon: The conspiracy theory spreading fake news - BBC Newsnight +- cSKGa_7XJkg # How false news can spread - Noah Tavlin +- d7pXNy0Yumc # Trump torches the press: 'I'm the president and you're fake news' +- Tp25LmdYlds # Ethical hacking and subverting the internet | Thomas Webb (Tom London) | TED

--- a/ytube/_data/lists/all-music-keys.yml
+++ b/ytube/_data/lists/all-music-keys.yml
@@ -3,6 +3,7 @@
 - Nnztjp7rSlc # 🔴 Beautiful Piano Music: Relaxing Music, Study Music, Sleep Music, Meditation Music
 - KsMqhVfUC9w # 417 Hz Healing music - Let go of mental blockages, Remove negative energy, Ancient Frequency music
 - As-oVm6NDX0 # Sarah &amp; Amelia Brightman   &quot;Moment Of Peace&quot; feat. Gregorian
+- dxUZeJf8mAc # Алина Палий, Corinne Bailey Rae - Like A Star (Cover version)
 - jG253f8CKfM # Tibetan Healing Sounds #1 -3 hours - Tibetan bowls for meditation, relaxation, calming, healing
 - K4ccN__EwAM # Schamanentrommel - 30 Minuten Heiltrommel für schamanische Reisen
 - 5cV5DHaVKv4 # Byron Metcalf  - Heart Warriors
@@ -28,8 +29,11 @@
 - aHpJQJ4gPOg # 528 Hz Heart Chakra Balance ➤ Emotional Stability | Aura Cleansing, Inner Peace, Mood Enhancement
 - DxMzvUtN3Gc # Extremely Powerful | HEART CHAKRA OPENING VIBRATIONS | (1 Hour Version)
 - i5yRPjYua7k # Music for Tantric Love
+- GxjcY8nqlhg # Полина Гагарина - Драмы больше нет
 - jmgfuZpzRcE # Purple dawn &amp; Saturn cosmology Episode 4 Part 1
 - _58AnhnbIgI # Lévon Minassian (Duduk) - &quot; They Have Taken the One I Love &quot;
+- ILBN4Qyzt-Y # Полина Гагарина - Зима (Lyric video)
+- 4ohMPni5PB4 # Интро
 - um8qb3qyRl8 # TANTRIC LOVE MEDITATION MUSIC
 - c-xE7pYgyH4 # Relaxing Music. Deep Meditation Music for Stress Relief, Yoga, Brain Power
 - ZtEmCGUAxhQ # Abraham Hicks   Physical Well Being Meditation
@@ -2148,6 +2152,7 @@
 - 2SUYmmjorNI # Sia - Move Your Body (Remix) - Choreography (Music video) - Party Club Dance Mix 2018
 - cHAFbhluXcE # Sahalé - Magharibi (Original Mix)
 - UexG1ZnhuTw # The Freakeasy at Love Burn 2018 - Ravers, why did you come here?
+- qo2Jj6kI4Ss # LOBODA - moLOko (Премьера клипа, 2020)
 - 0-7IHOXkiV8 # Kaleo - Way Down We Go (Official Video)
 - yn-XGO1vAX8 # Fatboy Slim - Beats for Love 2017 [BassPortal]
 - DBS_uk-y3B0 # Freakeasy presents: Julie Covello / DJ Shakey @ Love Burn 2018
@@ -2180,13 +2185,18 @@
 - t4u0DRzmhEI # Jennifer Lopez feat. Pitbull- On The Floor (Dj PremiX Edit)
 - O88D8ie9IU4 # Hodja &amp; Goxel -  Vicious Circle
 - pUgv2PvvS60 # Britney Hot Dancing at Love Burn
+- jhOxU7QmocU # Intro (Live)
 - g4DeaiIXBSY # &quot;Make Some Noise For Desi Boyz&quot; Title Song | Desi Boyz | Akshay Kumar, John Abraham
 - idsTznovfbY # take it off/going down for real remix (furry)
+- pVIvO83_Rtc # LOBODA - Random [Official video]
 - eHcr_98mzI8 # DJ Shakey (Warper NYC) @ Dubspot w/ VoltAxe Controller + Ableton
 - QSWf7PBEUFQ # Going Down For Real (Red Charge Remix)
+- MZSc_YpYWkA # intro
 - hbradZj4ekM # Fire Flow by Ishani Ishaya &amp; Christine Thompson @ Love Burn 2018 (2/2)
 - K5g3j8r5DPE # Tropical Deep House  | Summer Mix 2018 |  KYGO - SIA - ZAYN - DEAMN - ED SHEERAN
 - 1AdxORe6y00 # (English) The Penguins of Madagascar - Thump Thump Thump Lyrics
+- aOZqcIRttf8 # LOBODA & PHARAOH - Boom Boom (Премьера клипа, 2020)
+- V_8yP2lPhXI # LOBODA - К ЧЕРТУ ЛЮБОВЬ
 - FNUlpvKzhx8 # Tong Tong Tong Pakitong Kitong, Sint Maarten Soldier Crab takes a walk
 - mWvdsMwnGmM # Charlotte de Witte | Tomorrowland Belgium 2018
 - QkuVPcY-uz8 # Retro Mix 2018 | Best Deep House Remixes of Popular 80-90 Old Songs
@@ -2194,4 +2204,5 @@
 - ItE0-09C19A # DANCE 90,91,92,93,94,95,96,97,98,99 - MEGASET - CAPITÃO DEEJAY®
 - IJ8O2vxyxfI # 90&#39;s Best Acoustic Songs Vol. 1
 - -qZvVPgHCag # Swarm Fund in 120 seconds
+- pXes7ZSqSZU # В. Цой / Полина Гагарина - Кукушка (Даниэла)
 - D7ztZ_qhx5Q # Best Music Mix 2017- Shuffle Music Video HD - Melbourne Bounce Music Mix 2017
