--- a/ytube/_data/lists/clickbate-keys.yml
+++ b/ytube/_data/lists/clickbate-keys.yml
@@ -2,6 +2,7 @@
 - TE66McLMMEw
 - 5BoxRDDDSEA # 20 YOUTUBE CHANNEL IDEAS THAT ARE GROWING FAST IN 2020! | YOUTUBE NICHE IDEAS
 - QVETsrItWYY # 20 YouTube Niches to Make Money Without Showing Your Face
+- oxzuAmE2DcA # I Reviewed 200 MrBeast Thumbnails to Prove THIS
 - yAIr5g1tQwE # What YouTubers Don't Tell You About Starting a Channel (using Fiverr)
 - fHsa9DqmId8 # My Video Went Viral. Here's Why
 - jJv6aD9oe0I # 10 YouTube Niches That are Growing The FASTEST! | Trending Channel Ideas 2020
