--- a/ytube/_data/lists/fake-keys.yml
+++ b/ytube/_data/lists/fake-keys.yml
@@ -4,5 +4,14 @@
 - nknYtlOvaQ0 # Why obvious lies make great propaganda
 - C-7fzHy3aG0 # Kellyanne Conway's interview tricks, explained
 - p5P6nlQUt1U # SHAPIRO: 5 Reasons Why CNN Is Fake News
+- L4DkztDjlak # Reformed Neo-Nazi Explains How People Fall Prey to QAnon Online | MSNBC
 - 8KFQx-mc2Ao # 'So you won't take down lies?': Alexandria Ocasio-Cortez challenges Facebook CEO
-
+- 04hvzl-59nY # Truth or Fake 2020: 4 tips for detecting fake news
+- UQcCIzjz9_s # How Real Is Fake News? | Sharyl Attkisson | TEDxUniversityofNevada
+- u8Gd9MJsnnE # QAnon: The conspiracy theory spreading fake news - BBC Newsnight
+- cSKGa_7XJkg # How false news can spread - Noah Tavlin
+- d7pXNy0Yumc # Trump torches the press: 'I'm the president and you're fake news'
+- Tp25LmdYlds # Ethical hacking and subverting the internet | Thomas Webb (Tom London) | TEDxBerlinSalon
+- 3BUBTtUTOII # CBS caught broadcasting 'fake news on the coronavirus'
+- irHP3znqwq8 # How "fake news" and misinformation online is changing society
+- LW9I5OUHkXw # I've Stopped Asking People to Subscribe. You Should Too.
