--- a/ytube/_data/lists/hackers-keys.yml
+++ b/ytube/_data/lists/hackers-keys.yml
@@ -12,6 +12,7 @@
 - eRmZ_sNf2mE # The Simulation Theory - Hacking Reality (Must See)
 - FAECyLvSCHg # Anonymous Documentary - How Anonymous Hackers Changed the World Full Documentary
 - uIVBVd6yi_A # Universal Radio Hacker - Replay Attack With HackRF
+- 7TpsYofbAPA # Meet a 12-year-old hacker and cyber security expert
 - mAai6dRAtFo # DEF CON 22 - Michael Ossmann - The NSA Playset: RF Retroreflectors
 - gOruB8NXGvs # DEF CON 2020 NYE - Hacker Jeopardy Tiebreaker - Church of Wifi vs Show&TELNET
 - h0ICRnzFf7c # March Q&amp;A: Breathwork, Stress Hacks, Combating Pre-Diabetes &amp; More! - #293
