--- a/ytube/_data/lists/politics-keys.yml
+++ b/ytube/_data/lists/politics-keys.yml
@@ -4,6 +4,10 @@
 - 1LvmPL-ubsI # Alexandria Ocasio-Cortez Best Moments Supercut | NowThis
 - RFrKYYNiyZE # Hacker Wins Election As Pirate Party Leader
 - _v-hzc6blGI # How Trump makes extreme things look normal
+- Y_1G4_oPt_o # Alexandria Ocasio Cortez: Trump Isn't Ready For A Girl From The Bronx
 - 4HncGYdfnn8 # Pink Floyd Co-Founder Roger Waters- Julian Assange's Persecution Makes Me ASHAMED to be English!
+- aYsZv9JXmio # Prime Minister Jacinda Ardern Explains Why The UN Laughed At Trump
 - rELHUMNt4HM # The awkward debate around Trump's mental fitness
 - TJlpS4vhKP0 # Alexandria Ocasio-Cortez calls out Trump in five-minute corruption game
+- UYMIgnw2FPU # Why Fox News just can't quit Donald Trump
+- 9kZO5onGPbQ # Trump plans to leave White House with 'military-like feel' | GMA
