--- a/ytube/_data/lists/seen-keys.yml
+++ b/ytube/_data/lists/seen-keys.yml
@@ -6,6 +6,7 @@
 - UUDJoHeJbzw # Obviously I need another channel update
 - nuRuFj5c0bE # Why you are wrong about Universal Basic Income | The power of AI within the hands of the few
 - iNU895fTzSQ # "Getting Rich Is Easy" | START DOING THIS TODAY! Sadhguru
+- -8ZnPtvCFUc # WATCH: Suspicious pop-up coronavirus test site abruptly closes after being questioned | USA TODAY
 - xS9ewBGdlQg # Obviously I need another channel update
 - qkN8gYXiXdI # Time & Space: Concept or Reality? Is Time Travel Really Possible ? || Sadhguru || Adiyogi
 - brhA0Gc3OIs # 10 Facts About Ashley Alban
