--- a/ytube/_data/lists/tango-experimental-keys.yml
+++ b/ytube/_data/lists/tango-experimental-keys.yml
@@ -19,6 +19,7 @@
 - vs61OHs2g-w # Dua Lipa, Angèle - Fever (Official Music Video)
 - YNSiEB8qFyk # 'Pendant 24h' Grand Corps Malade et Suzane
 - ntC7c60uqqY
+- fT8ElbZTGdg # Полина Гагарина - Спектакль окончен
 - RUpDslHSLbU # The Devil’s Daughters w/ Danny B Harvey - Rock Boppin’ Baby
 - mmA5fekq8yQ
 - lfkgOWrd1vc # LP - When We're High [Official Video]
