--- a/ytube/_data/lists/techno-keys.yml
+++ b/ytube/_data/lists/techno-keys.yml
@@ -17,6 +17,7 @@
 - e1nTInfUBec # Anonymous - What is Happening to Our World... (2018-2019)
 - FzitBZApt0Q # Prof. Yuval Harari - How Technology Will Turn Men Into Gods
 - knrHPneSN10 # Nuclear Fusion Energy: The Race to Create a Star on Earth
+- bm-cCn0uRXQ # Elon Musk Motivational Video - What Inspires You? (Think Different)
 - 1BXYSGepx7Q # What you need to know about CRISPR | Ellen Jorgensen
 - vO-1l0lXR_U # Hutchison demonstrates Zero Point Energy
 - 0onncd0_0-o # Tensegrity Explained
@@ -37,6 +38,7 @@
 - LHS0V1ejHr8 # Nassim Haramein - Feedback / Feedforward & Creating Our Reality
 - nE819PPCA5o # Intel&#39;s New 49-qubit Quantum Chip &amp; Neuromorphic Chip
 - efk5uB7hhi8 # Nassim Haremein : The Physics of Consciousness 2008-
+- Q-2Ozkiok4s # The deals the 'Shark Tank' sharks regret never taking: Part 2 | ABC News
 - XZmGGAbHqa0 # Inside a Google data center
 - wkCmX24PRKE # A &quot;Eureka&quot; for Solar Energy | Bert Conings | TEDxUHasselt
 - 5Xr_07Ake2Y # BrainHub Panel Discussion: Downloading Consciousness: Connectomics and Computer Science
