--- a/ytube/_data/lists/test-keys.yml
+++ b/ytube/_data/lists/test-keys.yml
@@ -1,7 +1,5 @@
-- p80ritap2r4 # [Trance] Sia - Chandelier (Inu Machine Remix)
-- F1f-gn_mG8M # Eleanor Turner plays Baroque Flamenco
-- 7xSOy83sJxc # NAGASHAM-KA
-- q9kw1nOUVPg # Blondie - Call Me
-- t-22FqU0rK4 # Scorpions - Lorelei
-- hi-cSYiTP5k # The Phantom Of The Opera- Techno
-- 3cRyekJMmXw # TANGO 💃 Music Mix
+--- # tests
+- _SHFwmPQ_rQ # Cool Hearing Test: Are You a Superhuman?
+- YAxLueEKqmU # How Good Are Your Eyes? Cool and Quick Test
+- E1SDl9vLo8 # How Old Are Your Ears? (Hearing Test)
+- 8Z01336nDlU # Are You Fooled By These Audio Illusions?
