--- a/ytube/_data/ytlist.yml
+++ b/ytube/_data/ytlist.yml
@@ -32,6 +32,7 @@
 - climate-keys
 - coding-keys
 - conspiracy-keys
+- corona-keys
 - corruption-keys
 - cortinas-keys
 - creative-kitchen-keys
@@ -70,6 +71,7 @@
 - hackers-keys
 - hard-keys
 - healing-keys
+- health-keys
 - hippies-keys
 - humans-keys
 - ilike-keys
@@ -97,6 +99,7 @@
 - music-90s-keys
 - music-keys
 - music-rocks-keys
+- music-test-keys
 - nature-keys
 - new-age-keys
 - news-keys
