playlist update on 01/20/21:\n diff --git a/ytube/_data/lists/coding-keys.yml b/ytube/_data/lists/coding-keys.yml index b37ad89..1dd7dfd 100644 --- a/ytube/_data/lists/coding-keys.yml +++ b/ytube/_data/lists/coding-keys.yml @@ -15,0 +16 @@ +- pzfgbSfzhXg # Data Engineering Principles - Build frameworks not pipelines - Gatis Seja diff --git a/ytube/_data/lists/dr-it-keys.yml b/ytube/_data/lists/dr-it-keys.yml index 56acda5..fa2c9ec 100644 --- a/ytube/_data/lists/dr-it-keys.yml +++ b/ytube/_data/lists/dr-it-keys.yml @@ -2,0 +3 @@ +- AwbKwcw7bgg # Data Lake VS Data Warehouse diff --git a/ytube/_data/lists/geek-keys.yml b/ytube/_data/lists/geek-keys.yml index 5e6f29d..26da269 100644 --- a/ytube/_data/lists/geek-keys.yml +++ b/ytube/_data/lists/geek-keys.yml @@ -19,0 +20 @@ +- Ongqf93rAcM # How to Beat the Casino, and How They'll Stop You @@ -40,0 +42 @@ +- BgQFJ_UNIgw # What is NoSQL? @@ -43,0 +46 @@ +- cvhKoniK5Uo # MapReduce - Computerphile diff --git a/ytube/_data/lists/health-keys.yml b/ytube/_data/lists/health-keys.yml index 088b081..1d4d43e 100644 --- a/ytube/_data/lists/health-keys.yml +++ b/ytube/_data/lists/health-keys.yml @@ -2,0 +3 @@ +- NJ7M01jV058 # A Scientist Spilled 2 Drops Organic Mercury On Her Hand. This Is What Happened To Her Brain. diff --git a/ytube/_data/lists/news-keys.yml b/ytube/_data/lists/news-keys.yml index 42e8f77..8e448be 100644 --- a/ytube/_data/lists/news-keys.yml +++ b/ytube/_data/lists/news-keys.yml @@ -6,0 +7 @@ +- Z6RU1vegEW0 # Chinese billionaire Jack Ma has 'basically disappeared' diff --git a/ytube/_data/lists/politics-keys.yml b/ytube/_data/lists/politics-keys.yml index cdefc7d..81aad64 100644 --- a/ytube/_data/lists/politics-keys.yml +++ b/ytube/_data/lists/politics-keys.yml @@ -13,0 +14 @@ +- ryJkz4WdE3o # Alexandria Ocasio-Cortez Faces Down Pro-Trump Troll | NowThis diff --git a/ytube/_data/lists/seen-keys.yml b/ytube/_data/lists/seen-keys.yml index 1a4eb07..cf05324 100644 --- a/ytube/_data/lists/seen-keys.yml +++ b/ytube/_da

--- a/ytube/_data/lists/all-videos-keys.yml
+++ b/ytube/_data/lists/all-videos-keys.yml
@@ -13062,3 +13062,55 @@
 
 
 
+- 73QC3qw5b2Y # What do DATA ENGINEERS do? Is data engineering a good career choice in 2020?
+- -K9SjrWpeys # Data Engineering and Data Science: Bridging the Gap | DataEDGE 2016
+- vNNoNs_VeWc # How to Become a Data Engineer in 2020
+# Business insights
+- VjuL1TH_cWY # Secrets of the Greatest Hedge Fund of All Time
+- l-9VC_uJw4U # How Venmo Makes Money
+- 0Is_gfHTWM0 # How Square Makes Money
+
+- pzfgbSfzhXg # Data Engineering Principles - Build frameworks not pipelines - Gatis Seja
+
+- VtzvF17ysbc # What is Data Pipeline | How to design Data Pipeline ? - ETL vs Data pipeline
+- AwbKwcw7bgg # Data Lake VS Data Warehouse
+- Ongqf93rAcM # How to Beat the Casino, and How They'll Stop You
+- BgQFJ_UNIgw # What is NoSQL?
+- cvhKoniK5Uo # MapReduce - Computerphile
+
+
+
+- NJ7M01jV058 # A Scientist Spilled 2 Drops Organic Mercury On Her Hand. This Is What Happened To Her Brain.
+
+
+
+
+
+- Z6RU1vegEW0 # Chinese billionaire Jack Ma has 'basically disappeared'
+
+- ryJkz4WdE3o # Alexandria Ocasio-Cortez Faces Down Pro-Trump Troll | NowThis
+
+
+- 4ro8sPOgCBg # Never Eat The ‘Clean’ Part Of Moldy Bread
+- MHS-htjGgSY # Game Theory: The Science of Decision-Making
+
+- iANBytZ26MI # What Is Hadoop? | Introduction To Hadoop | Hadoop Tutorial For Beginners | Simplilearn
+- 9s-vSeWej1U # What is Hadoop?
+- ZS_kXvOeQ5Y # SQL vs NoSQL or MySQL vs MongoDB
+- QngDInV2ino # Why Hadoop is Dying
+- v3yv88h68GY # What is a Data Lake?
+- 2PVzOHA3ktE # Hadoop vs Spark | Hadoop And Spark Difference | Hadoop And Spark Training | Simplilearn
+- 4Gfl0WuONMY # Understanding HDFS using Legos
+- MfF750YVDxM # What is Hadoop?: SQL Comparison
+- Pq3OyQO-l3E # Introduction to Hadoop
+- nKW8Ndu7Mjw # The 7 steps of machine learning
+- h97fXhDN5qE # Elon Musk's Basic Economics
+- 9s-vSeWej1U # #Hadoop #WhatIsHadoop #BigData
+- xDpvyu0w0C8 # Hadoop vs Spark | Which One to Choose? | Hadoop Training | Spark Training | Edureka
+- lji-jNsXmAM # Renaissance Technologies - Trading Strategies Revealed | A Documentary
+- ZZr9oE4Oa5U # Future of Data Engineering
+
+
+
+
+- nE2NT_Wt46A # How Working Remotely Will Change More Than Work
