--- a/ytube/_data/lists/coding-keys.yml
+++ b/ytube/_data/lists/coding-keys.yml
@@ -13,6 +13,7 @@
 - FedQ2NlgxMI # BOB MARTIN PRESENTS: The Future of Agile
 - OQ5jsbhAv_M # 19. Dynamic Programming I: Fibonacci, Shortest Paths
 - ecIWPzGEbFc # "Uncle" Bob Martin - "The Future of Programming"
+- pzfgbSfzhXg # Data Engineering Principles - Build frameworks not pipelines - Gatis Seja
 - yG0RhKFTonw # How to use Cracking The Coding Interview Effectively
 - wCl9kvQGHPI # Cracking the Facebook Coding Interview The Approach
 - HXNhEYqFo0o # Programming Loops vs Recursion - Computerphile
