--- a/ytube/_data/lists/geek-keys.yml
+++ b/ytube/_data/lists/geek-keys.yml
@@ -17,6 +17,7 @@
 - UCISttFSoIY # B8 2.0TFSI 155KW
 - JNK8Bp9sZOA # John McAfee - Takes On Larry King - One on One
 - dhpg_8D2FPI # Zap: Lightning Network Wallet
+- Ongqf93rAcM # How to Beat the Casino, and How They'll Stop You
 - 5o_DODh3Yfc # 'Fuming': How Trump is reacting to his second impeachment
 - sZuxHSM8p-Q # Ledger Hardware Receive Address Attack | Protect Your Bitcoin
 - R1CBfyPQmcM
@@ -38,9 +39,11 @@
 - mSBcG-SStqc # 10 MOST Emotional Robots Which Actually Exist ✅
 - clfFT1XOJKM # The Truth Behind Artificial Intelligence | Andrew Zeitler | TEDxStMaryCSSchool
 - MAfAVGES-Yc # MythBusters Fingerprints Busted
+- BgQFJ_UNIgw # What is NoSQL?
 - cO4Hsd8ETgk # 1st generation human-like AI robots revealed
 - Hi0C5vBvy3g # 4 3 - Alternative Consensus Algorithms @michaelgord
 - w1NxcRNW_Qk # Two robots debate the future of humanity
+- cvhKoniK5Uo # MapReduce - Computerphile
 - NI6sQHfIPbk # CIS 2016 Tuesday, June 7- Developing for Swirlds Hashgraph-  Leemon Baird
 - ea3miXs_P6Y # Java and the Blockchain
 - O2thSsQrZUM # Carbon M1 Super Fast 3D Printer Demo!
