--- a/ytube/_data/lists/news-keys.yml
+++ b/ytube/_data/lists/news-keys.yml
@@ -4,4 +4,5 @@
 - hKUOkiKHD8U # Elon Musk Most Shocking 2021 Predictions - And Tesla Share Price Prediction
 - UJepAsi7NAQ # Rioter who beat police officer says 'death is the only remedy'
 - mx6MzHYzEfY # Ellen's Favorite Moments with Noah Ritter
+- Z6RU1vegEW0 # Chinese billionaire Jack Ma has 'basically disappeared'
 
