--- a/ytube/_data/lists/politics-keys.yml
+++ b/ytube/_data/lists/politics-keys.yml
@@ -11,3 +11,4 @@
 - TJlpS4vhKP0 # Alexandria Ocasio-Cortez calls out Trump in five-minute corruption game
 - UYMIgnw2FPU # Why Fox News just can't quit Donald Trump
 - 9kZO5onGPbQ # Trump plans to leave White House with 'military-like feel' | GMA
+- ryJkz4WdE3o # Alexandria Ocasio-Cortez Faces Down Pro-Trump Troll | NowThis
