--- a/ytube/_data/lists/seen-keys.yml
+++ b/ytube/_data/lists/seen-keys.yml
@@ -36,6 +36,7 @@
 - WGTxqhSN8bE # Estas Tonne - Internal Flight
 - PfEWKwsagkI # BOND - live from the Royal Albert Hall.avi
 - cLu9GmV2vF0 # Didgeridoo Meets Orchestra
+- 4ro8sPOgCBg # Never Eat The ‘Clean’ Part Of Moldy Bread
 - H4Jmx684klg # Révélations à Tiwanaku / Puma Punku : Présence de géopolymères
 - -FqnsqNlExw # ΜΑΥΡΟ ΚΟΚΚΙΝΟ tango version
 - 1-hphxgC8Ns # Where did humans come from?  New Documentary 2017
