--- a/ytube/_data/lists/socialtech-keys.yml
+++ b/ytube/_data/lists/socialtech-keys.yml
@@ -8,3 +8,4 @@
 - VNGFep6rncY # Why the majority is always wrong | Paul Rulkens | TEDxMaastricht
 - mUUk0jSndoc # EB98 – Robin Hanson: Futarchy, Prediction Markets And The Challenge Of Disruptive Technology
 - iRDIhxeerBA # Robin Hanson: Enlightening Hidden Motives & Social Agendas @Foresight Institute
+- MHS-htjGgSY # Game Theory: The Science of Decision-Making
