--- a/ytube/_data/lists/techno-keys.yml
+++ b/ytube/_data/lists/techno-keys.yml
@@ -12,9 +12,11 @@
 - Cgxsv1riJhI # How computers learn to recognize objects instantly | Joseph Redmon
 - fvrUsAxTuJc # 5 INVENTIONS THAT WILL BLOW YOUR MIND_HD
 - EVDmi7zWtyE # Gods and Robots: Myths, Machines, and Ancient Dreams of Technology, Adrienne Mayor
+- h97fXhDN5qE # Elon Musk's Basic Economics
 - UzT3Tkwx17A # The Future of Artificial Intelligence Documentary 2018
 - eUQzAhOVj70 # Andrew &quot;bunnie&quot; Huang - Leading-edge Technologies Session「Synthesis of Matter, Information and Life」
 - e1nTInfUBec # Anonymous - What is Happening to Our World... (2018-2019)
+- 9s-vSeWej1U # #Hadoop #WhatIsHadoop #BigData
 - FzitBZApt0Q # Prof. Yuval Harari - How Technology Will Turn Men Into Gods
 - knrHPneSN10 # Nuclear Fusion Energy: The Race to Create a Star on Earth
 - bm-cCn0uRXQ # Elon Musk Motivational Video - What Inspires You? (Think Different)
