--- a/ytube/_data/ytlist.yml
+++ b/ytube/_data/ytlist.yml
@@ -15,6 +15,7 @@
 - attack-keys
 - awareness-keys
 - banned-keys
+- big-data-keys
 - birds-keys
 - bitcoin-keys
 - blockchain-keys
@@ -22,6 +23,7 @@
 - broken-keys
 - burnman-ish-keys
 - burn-out-keys
+- business-keys
 - capitalism-keys
 - channels-keys
 - chill-deep-keys
@@ -45,6 +47,7 @@
 - DJ-keys
 - docum-keys
 - downloaded-keys
+- dr-it-keys
 - drums-keys
 - earthnation-keys
 - economy-keys
@@ -149,7 +152,9 @@
 - tantra-keys
 - teal-keys
 - teal-swan-keys
+- tech-education-keys
 - techno-keys
+- tech-watch-keys
 - TEDs-keys
 - test-keys
 - the-rich-keys
@@ -168,6 +173,7 @@
 - work-keys
 - work-music-keys
 - workout-music-keys
+- world-change-keys
 - world-keys
 - wuotai-keys
 - wuotai-music-keys
