--- a/ytube/_data/lists/health-keys.yml
+++ b/ytube/_data/lists/health-keys.yml
@@ -1,2 +1,3 @@
 --- # health related videos
 - jtqAqL3fn64 # The Untold Story of the First Vaccine
+- NJ7M01jV058 # A Scientist Spilled 2 Drops Organic Mercury On Her Hand. This Is What Happened To Her Brain.
